Optimize DialogueFeignClient small response reader
Avoid InputStreamReader / HeapByteBuffer overhead for small (less than 8KiB) inputs,
see https://github.com/FasterXML/jackson-core/pull/1081